css/style.css
/* ... */
header, footer{
	color: #fff;
	display: block;
	padding: 2vh;
	text-align: center;
	position: relative;
}
footer{
	font-size: 10pt;
	background-color: #1e2327;
	color: rgba(255,255,255,0.8)
}
header{
	padding: 20vh 4vw;
	padding-bottom: calc(20vh + 4vh);
	overflow: hidden;
	box-sizing: border-box;
	z-index: -2;
	background-color: #1e2327;
}
header h1{
	font-weight: 100;

}

p{
	text-align: justify;
}
header .contacts{
	background: rgba(0,0,0,0.2);
	position: absolute;
	bottom: 0px;
	left: 0;
	width: 100vw;
	box-shadow: 0 -4px 6px -1px #000 inset;
}
header .contacts a{
	display: inline-flex;
	align-content: center;
	color: #fff;
	padding: 10px;
	font-weight: 300;
	letter-spacing: 0.4pt;
	font-size: 11pt;
}
header .contacts a:nth-child(2){
	margin-left: 20px;
	margin-right: 20px;
}
header .bg{
	width: 100vw;
	height: 120%;
	position: absolute;
	top: 0;
	left: 0;
	background-color: #1e2327;
	background-image: url('../img/bg.jpg');
	background-size: cover;
	background-position: center;
	z-index: -1;
}
.with-icon{
	display: flex;
	align-items: center;
}
footer .with-icon{
	display: flex;
	justify-content: center;
}
.with-icon i{
	margin-left: 5px;
	margin-right: 5px;
}
h1, h2, h3, h4{
	font-weight: normal;
}
.wrapper{
	display: flex;
	flex-direction: column;
}
section#content,
section#resume{
	align-self: center;
	max-width: 960px;
	margin: 4vw auto;
	margin-top: 8vh;
	margin-bottom: 8vh;
}
section#content h2 > span,
section#resume h2 > span{
	line-height: 50px;
}
a{
	color: #00a859;
	cursor: pointer;
	text-decoration: none;
	border-radius: 4px;
	align-items: center;
}
a.button{
	color: #fff;
	background: #00a859;
	padding: 10px 20px;
	display: inline-flex;
	font-size: 10pt;
	text-transform: uppercase;
	text-transform: uppercase;
	align-items: center;
	margin-bottom: 5px;
}
a i{
	margin-right: 10px;
}
.profile-pic{
	width: 40vw;
	max-width: 150px;
	box-shadow: 0 3px 10px -5px #000;
	border-radius: 40vw;
}
hgroup h1, hgroup h2, hgroup h3, hgroup h4{
	padding: 0;
	margin: 0;
}
hgroup h2{
	font-size: 10pt;
	letter-spacing: 2px;
	font-weight: normal;
	text-transform: uppercase;
	opacity: 0.7;
}
hgroup{
	margin-bottom: 20px;
}
.box{
	background: #1e2327;
	border: solid thin #1e2327;
	padding: 10px 30px;
	color: #fff;
	border-radius: 3px;
	font-size: 10pt;
	margin-bottom: 30px;
}
hr{
	border: none;
	border-top: solid thin #fff;
	opacity: 0.1;
}
.tech-stack{
	opacity: 0.6;
}
@media screen and (max-width: 767px) {
	*{
		box-sizing: border-box;
	}
	a{
		/*display: flex;*/
		width: 100%;
		box-sizing: border-box;
		text-align: left;
		margin-bottom: 3px;
		margin-right: 0 !important;
		margin-left: 0 !important;
		/*padding: 10px 4vw !important;*/
	}
	header{
		padding-bottom: calc(20vh + 20vh);
	}
	.box{
		padding: 10px 20px;
	}
}
small{
	font-size: 10pt;
	opacity: 0.7;
}
.right{
	float: right;
}
.text-right{
	text-align: right;
}
.text-center{
	text-align: center;
}
.text-left{
	text-align: left;
}
.bold{
	font-weight: bold;
}
.small{
	font-size: 0.8em;
}
.no-wrap{
	white-space: nowrap;
}
.accent{
	color: #00a859;
}
.grayscale{
	filter: grayscale(100%);
}
.faded{
	opacity: 0.7;
}
.clearfix{
	clear: both;
	display: block;
}
.code-heading{
	display: block;
	color: #00a859;
	padding-top: 1em;
	font-weight: bold;
}
.uppercase{
	text-transform: uppercase;
}
.hidden{
	opacity: 0;
}
.relative-pos{
	position: relative;
}
/* Vue transitions */
.slide-fade-enter-active {
  transition: all .3s ease .3s;
}
.slide-fade-leave-active {
  transition: all .3s ease;
}
.slide-fade-enter, .slide-fade-leave-to
/* .slide-fade-leave-active below version 2.1.8 */ {
  transform: translateY(20px);
  opacity: 0;
}


.slide-fade-scale-enter-active {
  transition: all .2s ease .2s;
}
.slide-fade-scale-leave-active {
  transition: all .2s ease;
}
.slide-fade-scale-enter, .slide-fade-scale-leave-to
/* .slide-fade-leave-active below version 2.1.8 */ {
  transform: translateY(0px) scale(1,0);
  /*opacity: 0;*/
}
#content-wrapper{
	padding: 0 1rem;
	font-size: 11pt;
}

/*resume styling*/
.content-box{
	margin: 3em 0;
	padding-bottom: 1rem;
	border-bottom: solid thin rgba(0,0,0,0.2);
}
.content-box::after{
	content: '';
	display: block;
	width: 5px;
	height: 5px;
	border-radius: 50%;
	background: rgba(0,0,0,0.2);
	opacity: 1;
	margin-top: 14px;
	position: relative;
	float: right;
	margin-right: -5px;
}
.content-box::before{
	content: '';
	display: block;
	width: 5px;
	height: 5px;
	border-radius: 50%;
	background: rgba(0,0,0,0.2);
	opacity: 1;
	margin-top: -3.2em;
	position: relative;
	float: left;
	margin-left: -5px;
}
#whoami.content-box::before,
#education.content-box::before,
#sports.content-box::before,
#clubs.content-box::before
{
	background: none;
}
#whois.content-box::before{
    margin-top: -4.6em;
    margin-left: -49px;
}
.content-box h2 {
	display: inline-block;
	border: solid thin #333;
	color: #333;
	padding: 5pt 10pt;
}
.content-box h2~hr {
	width: 100%;
    border-bottom: solid thin #333;
    opacity: 1;
	margin-top: -15.5pt;
}
.content-box h2~hr::after{
	content: '';
    display: block;
    width: 5px;
    height: 5px;
    border-radius: 50%;
    background: #333;
    opacity: 1;
    margin-top: -2.5px;
    position: relative;
	float: right;
	margin-right: -5px;
}
#whoami {
	font-size: 11pt;
}
#whoami hgroup{
    display: flex;
    align-items: flex-end;
}
@media screen and (max-width: 640px) {
	#whoami hgroup{
		flex-direction: column;
		align-items: flex-start;
	}
}

#whoami h1{
    color: #00a859;
    font-size: 3.5rem;
    padding-right: 1rem;
    font-weight: 100;
    line-height: 0.9;
    margin-top: 0.1em;
}
#whoami h3{
    font-size: 1rem;
    opacity: 0.9;
    line-height: 1;
}

.terminal .content-box{
	margin: 0.2em 0;
}
.terminal ul{
	padding: 0;
	margin-bottom: 0;
	list-style: none;
}
.terminal ul li{
	list-style: none;
	padding: 0.4em 0;
}
/* ... */

